--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+/* Styling div maincontainer*/
 div#divmaincontainer { 
   width:80%;
   margin:auto;
   border:1px solid blue;}
+
+/*Styling the header of the site*/
+header#siteheader{
+  
+}
 
