--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ div#divmaincontainer {
 
 /*Styling the header of the site*/
 header#siteheader{
-  
+  width:100%;
+  height:150px;
+  background-image: linear-gradient(orange, cyan,powder-blue);
 }
 
