--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
+/* Styling div maincontainer*/
+div#divmaincontainer { 
+  width:80%;
+  margin:auto;
+  border:1px solid blue;}
 
+/*Styling the header of the site*/
+header#siteheader{
+  width:100%;
+  height:150px;
+  background-image: linear-gradient(orange, cyan,powder-blue);
+}
