--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,5 @@ header#siteheader{
   width:100%;
   height:150px;
   background-image: linear-gradient(orange, cyan,powder-blue);
+  border: 1px solid darkgrey;
 }
