--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ div#divmaincontainer {
 
 /*Styling the header of the site*/
 
-header#siteheader{
+#siteheader{
   width:100%;
   height:150px;
   background-image: linear-gradient(orange, cyan,powder-blue);
