--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,11 @@ div#divmaincontainer {
   width:80%;
   margin:auto;
   border:1px solid blue;}
+/*Styling the header of the site*/
+
+#siteheader{
+  width:100%;
+  height:150px;
+  background-image: linear-gradient(orange, cyan,powder-blue);
+  border: 1px solid darkgrey;
+}
