--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ div#divmaincontainer {
   border:1px solid blue;}
 /*Styling the header of the site*/
 
-#siteheader{
+header#siteheader{
   width:100%;
   height:150px;
   background-image: linear-gradient(orange, cyan,powder-blue);
