--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,12 @@ header#siteheader {
   background-image:linear-gradient(grenyellow, cyan,teal);
   border:1px solid darkgrey;
   border-radius:5px; 10px 0 0;}
+  
+/*styling site title*/
+  h1#sitetitle {
+    font-family: Arial;
+    font-size: 32px;
+    color: orange;
+  }
+
 
