--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,14 @@ span#sitemotto {
   font-family:tahoma;
   font-style: italic;
   color: aqua;
-  text-align: center;
+  text-align: center;}
+
+/*site navigation*/
+
+nav#sitenav {
+  width: 100%;
+  height: 30px;
+  background-color: radial-gradient(greenyellow, cyan);
 }
 
 
