--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,12 @@ span#sitemotto {
 nav#sitenav {
   width: 100%;
   height: 30px;
-  background-color: radial-gradient(greenyellow, cyan);
+  background-color: radial-gradient(greenyellow, cyan);}
+
+/* navigation elements*/
+ul#ulnav>li {
+  display:inline;
+  list-style-type: none;
 }
 
 
